tests/baselines/reference/inheritanceMemberFuncOverridingAccessor.errors.txt
tests/cases/compiler/inheritanceMemberFuncOverridingAccessor.ts(2,9): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/compiler/inheritanceMemberFuncOverridingAccessor.ts(5,9): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/compiler/inheritanceMemberFuncOverridingAccessor.ts(11,5): error TS2416: Class member of type '() => string' is not assignable to base class member of type 'string'.
tests/cases/compiler/inheritanceMemberFuncOverridingAccessor.ts(11,5): error TS2426: Class 'a' defines instance member accessor 'x', but extended class 'b' defines it as instance member function.


==== tests/cases/compiler/inheritanceMemberFuncOverridingAccessor.ts (4 errors) ====
    class a {
        get x() {
            ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
            return "20";
        }
        set x(aValue: string) {
            ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
    
        }
    }
    
    class b extends a {
        x() {
        ~
!!! error TS2416: Class member of type '() => string' is not assignable to base class member of type 'string'.
        ~
!!! error TS2426: Class 'a' defines instance member accessor 'x', but extended class 'b' defines it as instance member function.
            return "20";
        }
    }